# resume-parser

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  pyproject.toml  roadmap.md
client/: openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  routeTree.gen.ts
client/src/routes/: __root.tsx  index.tsx  resumes.$fileId.tsx  resumes.tsx
client/src/store/: useAppStore.ts
migrations/: 001_initial.sql  002_add_pdf_bytes.sql
plans/: frontend-restructure.md  stage4-field-extraction.md  stage5-normalization.md
server/: .env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/src/resume_parser/: jobs.py
server/src/resume_parser/api/: app.py
server/src/resume_parser/api/routes/: resumes.py
server/src/resume_parser/db/: models.py  session.py
server/src/resume_parser/llm/: claude.py
server/src/resume_parser/pipeline/: classify.py  extract.py  field_extract.py  run.py  segment.py
src/resume_parser/: cli.py  extract.py  field_extract.py  index.py  main.py  normalize.py  pipeline.py  segment.py  server.py
src/resume_parser/api/: deps.py  schemas.py
src/resume_parser/api/routes/: jobs.py
src/resume_parser/data/: skills_map.json
src/resume_parser/llm/: base.py  claude.py
src/resume_parser/pipeline/: index.py  normalize.py
