[project]
name = "resume-parser"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "google-cloud-documentai>=2.29",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "openai>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
ingest = "resume_parser.cli:ingest_main"
segment = "resume_parser.cli:segment_main"
extract = "resume_parser.cli:extract_main"
normalize = "resume_parser.cli:normalize_main"
index = "resume_parser.cli:index_main"
serve = "resume_parser.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_parser"]
